--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,4 @@
 Validator.PLEASE_ENTER_VALID_NAME = Name should contain only letters
+Validator.PLEASE_ENTER_VALID_EMAIL=Please enter valid emai xxx@xxx.com format
+Validator.PLEASE_ENTER_VALID_NUMBER=Please enter valid phone number
+Validator.PLEASE_Enter_VALID_PASSWORD=Please enter valid password
